--- a/html/listaDeEspera.html
+++ b/html/listaDeEspera.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header class=" container">
+      
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
            <!-- <a class="navbar-brand" href="#">Navbar</a> --> 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,21 +22,18 @@
                   <a class="nav-link" href="../index.html">Principal <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./html/sobre.html">Sobre</a>
+                  <a class="nav-link" href="sobre.html">Sobre</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./html/listaDeEspera.html">Lista de espera</a>
+                  <a class="nav-link" href="listaDeEspera.html">Lista de espera</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./html/login.html">Login</a>
+                    <a class="nav-link" href="login.html">Login</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./html/contato.html">contato</a>
+                    <a class="nav-link" href="contato.html">contato</a>
                   </li>
               </ul>
             </div>
           </nav>
     </header>
-    <h2>pagina login</h2>
-</body>
-</html>
