--- a/index.html
+++ b/index.html
@@ -37,57 +37,117 @@
     </div>
   </nav>
 
-  <div>
-    <h1 class=" mt-5 container col-md-2">Titulo</h1>
-  </div>
 
-  <div class="row">
-    <div class="col-md-6">
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi recusandae dolore
-        quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
-      </p>
+  <div class="container">
+    <div>
+      <h1 class="mt-5 text-center">Titulo</h1>
     </div>
-    <div class="col-md-6">
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi recusandae dolore
-        quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
-      </p>
-    </div>
-    <div class="mt-5 container col-md-9">
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi recusandae dolore
-        quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
-      </p>
-    </div>
-  </div>
 
-  <div class="mt-5">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="assets/img/canva1.png" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="assets/img/canva2.png" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="img" src="assets/img/canva3.png" alt="Third slide">
+    <div class="row mt-3">
+      <div class="col-md-6">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi recusandae dolore
+          quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
+        </p>
+      </div>
+      <div class="col-md-6">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi recusandae dolore
+          quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
+        </p>
+      </div>
+      <div class="mt-5 container col-md-9">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi recusandae dolore
+          quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+
+
+      <div class="col-md-6 mt-5">
+        <button type="button" class="btn btn-secondary btn-lg btn-block">Entre na nossa lista de espera</button>
+        <div class="row container">
+          <div class="col-md-6 card mt-2" style="width: 16rem;">
+            <img class="card-img-top" src="assets/img/canva1.png" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 card mt-2" style="width: 16rem;">
+            <img class="card-img-top" src="assets/img/canva2.png" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+
+
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+
+      
+
+      
+
+      <!-- Carrossel -->
+      <div class="col-md-6 mt-5">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="assets/img/canva1.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="assets/img/canva2.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="assets/img/canva3.png" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
     </div>
   </div>
 
+  <!-- Footer -->
+  <footer class="mt-5 pt-4" style="background-color: rgb(15, 154, 103); border-color: #000;">
+    <div class="container-fluid text-center text-md-left">
+      <div class="row">
+        <div class="col-md-6 mt-md-0 mt-3">
+          <h5 class="text-uppercase font-weight-bold">Footer text 1</h5>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sapiente sint, nulla, nihil
+            repudiandae commodi voluptatibus corrupti animi sequi aliquid magnam debitis, maxime quam recusandae
+            harum esse fugiat. Itaque, culpa?</p>
+        </div>
+
+        <div class="col-md-6 mb-md-0 mb-3">
+          <h5 class="text-uppercase font-weight-bold">Footer text 2</h5>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt fuga perferendis modi earum
+            commodi aperiam temporibus quod nulla nesciunt aliquid debitis ullam omnis quos ipsam, aspernatur id
+            excepturi hic.</p>
+        </div>
+      </div>
+    </div>
+    <hr>
+    <div class="text-center pb-3">© 2022 Copyright:
+      <a href="/"> Resilia</a>
+    </div>
+  </footer>
+  <!-- Footer -->
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -99,5 +159,7 @@
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
 </body>
+
+
 
 </html>
