--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
         </li>
+        <li class="nav-item nav-pills">
+          <a class="nav-link active" href="#">Login</a>
+        </li>
+
+
+
       </ul>
     </div>
   </nav>
@@ -61,37 +67,41 @@
       </div>
     </div>
 
-    <div class="row">
-
-
+    <div class="row container">
       <div class="col-md-6 mt-5">
         <button type="button" class="btn btn-secondary btn-lg btn-block">Entre na nossa lista de espera</button>
-        <div class="row container">
-          <div class="col-md-6 card mt-2" style="width: 16rem;">
-            <img class="card-img-top" src="assets/img/canva1.png" alt="Card image cap">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            </div>
+
+        <div class="row justify-content-center ">
+          <div class="col-md-6 mt-1">
+            <img src="assets/img/canva1.png" alt="..." class="img-thumbnail">
           </div>
 
-          <div class="col-md-6 card mt-2" style="width: 16rem;">
-            <img class="card-img-top" src="assets/img/canva2.png" alt="Card image cap">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            </div>
+          <div class="col-md-6 mt-1" style="width: 16rem;">
+            <img src="assets/img/canva2.png" alt="..." class="img-thumbnail">
+          </div>
+
+        </div>
+
+
+        <div class="row justify-content-center">
+
+          <div class="col-md-6 mt-1" style="width: 16rem;">
+            <img src="assets/img/canva2.png" alt="..." class="img-thumbnail">
+          </div>
+
+          <div class="col-md-6 mt-1" style="width: 16rem;">
+            <img src="assets/img/canva2.png" alt="..." class="img-thumbnail">
           </div>
 
 
         </div>
+
+
+
+
+
       </div>
-
-      
-
-      
-
-      <!-- Carrossel -->
+    <!-- Carrossel -->
       <div class="col-md-6 mt-5">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
