Estilo footer e página de formulário

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a class="nav-link disabled" href="#">Disabled</a>
         </li>
         <li class="nav-item nav-pills">
-          <a class="nav-link active" href="#">Login</a>
+          <a class="nav-link active" href="login.html">Login</a>
         </li>
 
 
@@ -129,29 +129,14 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
+        <div class="text-center">
+          <h3 class="bp-3">O amor se cultiva!</h3></div>
       </div>
     </div>
   </div>
 
   <!-- Footer -->
-  <footer class="mt-5 pt-4" style="background-color: rgb(15, 154, 103); border-color: #000;">
-    <div class="container-fluid text-center text-md-left">
-      <div class="row">
-        <div class="col-md-6 mt-md-0 mt-3">
-          <h5 class="text-uppercase font-weight-bold">Footer text 1</h5>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sapiente sint, nulla, nihil
-            repudiandae commodi voluptatibus corrupti animi sequi aliquid magnam debitis, maxime quam recusandae
-            harum esse fugiat. Itaque, culpa?</p>
-        </div>
-
-        <div class="col-md-6 mb-md-0 mb-3">
-          <h5 class="text-uppercase font-weight-bold">Footer text 2</h5>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt fuga perferendis modi earum
-            commodi aperiam temporibus quod nulla nesciunt aliquid debitis ullam omnis quos ipsam, aspernatur id
-            excepturi hic.</p>
-        </div>
-      </div>
-    </div>
+  <footer class="mt-5 pt-4 bg-light">
     <hr>
     <div class="text-center pb-3">© 2022 Copyright:
       <a href="/"> Resilia</a>
