--- a/index.html
+++ b/index.html
@@ -36,15 +36,12 @@
         <li class="nav-item nav-pills">
           <a class="nav-link active" href="login.html">Login</a>
         </li>
-
-
-
       </ul>
     </div>
   </nav>
 
-
-  <div class="container">
+  <!--Primeria row-->
+  <div class="container shadow-lg p-3 mb-5 bg-white rounded">
     <div>
       <h1 class="mt-5 text-center">Titulo</h1>
     </div>
@@ -66,7 +63,8 @@
         </p>
       </div>
     </div>
-
+    <!--Primeria row-->
+    <!--Segunda row-->
     <div class="row container">
       <div class="col-md-6 mt-5">
         <button type="button" class="btn btn-secondary btn-lg btn-block">Entre na nossa lista de espera</button>
@@ -79,12 +77,10 @@
           <div class="col-md-6 mt-1" style="width: 16rem;">
             <img src="assets/img/canva2.png" alt="..." class="img-thumbnail">
           </div>
-
         </div>
 
 
         <div class="row justify-content-center">
-
           <div class="col-md-6 mt-1" style="width: 16rem;">
             <img src="assets/img/canva2.png" alt="..." class="img-thumbnail">
           </div>
@@ -92,16 +88,10 @@
           <div class="col-md-6 mt-1" style="width: 16rem;">
             <img src="assets/img/canva2.png" alt="..." class="img-thumbnail">
           </div>
-
-
         </div>
-
-
-
-
-
       </div>
-    <!-- Carrossel -->
+
+      <!-- Carrossel -->
       <div class="col-md-6 mt-5">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
@@ -130,13 +120,80 @@
           </a>
         </div>
         <div class="text-center">
-          <h3 class="bp-3">O amor se cultiva!</h3></div>
+          <h3 class="bp-3 mt-2">texto!</h3>
+        </div>
       </div>
     </div>
   </div>
+  <!-- Carrossel -->
+  <!--Segunda row-->
+
+
+
+
+  <!--Terceira row/ Sobre nós-->
+
+  
+  <div class="container-fluid" style="background-color: rgba(194, 181, 207, 0.465);">
+    <hr>
+    <div>
+      <h1 class=" text-center">Sobre nós</h1>
+    </div>
+    
+    <div class="row  mt-3">
+      <div class="col-md-6">
+        <div class="row justify-content-center ">
+          <div class="col-md-6 mt-1">
+            <img src="assets/img/canva1.png" alt="..." class="img-thumbnail mt-4">
+          </div>
+        </div>
+
+        <p class="mt-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi
+          recusandae dolore
+          quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
+        </p>
+
+        <div class=" align-items-center mt-4">
+          <img src="assets/img/logotipo-do-linkedin.png" alt="" width="40px">
+
+          <img src="assets/img/logotipo-do-github.png" alt="" width="40px">
+
+        </div>
+
+      </div>
+      <div class="col-md-6">
+        <div class="row justify-content-center  ">
+          <div class="col-md-6 mt-1">
+            <img src="assets/img/canva1.png" alt="..." class=" img-thumbnail mt-4">
+          </div>
+        </div>
+        <p class="mt-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi
+          recusandae dolore
+          quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
+        </p>
+
+        <div class=" align-items-center mt-4">
+          <img src="assets/img/logotipo-do-linkedin.png" alt="" width="40px">
+
+          <img src="assets/img/logotipo-do-github.png" alt="" width="40px">
+
+        </div>
+      </div>
+    </div>
+    <div class="mt-4 pb-4 container col-md-9">
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi recusandae dolore
+        quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
+      </p>
+    </div>
+  </div>
+
+
+
+
+  <!--Terceira row/ Sobre nós-->
 
   <!-- Footer -->
-  <footer class="mt-5 pt-4 bg-light">
+  <footer class=" pt-4 bg-light">
     <hr>
     <div class="text-center pb-3">© 2022 Copyright:
       <a href="/"> Resilia</a>
