--- a/login.html
+++ b/login.html
@@ -42,26 +42,22 @@
     <!-- /Navbar -->
 
     <!-- form -->
-    <div class="row container align-items-center">
+    <div class="row container align-items-center ">
        
             <div class="col-md-6 ">
-            <form class="col-md-9 ">
+            <form class="col-md-9 shadow-lg p-3 mb-5 bg-white rounded ">
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
+                    <label for="exampleInputEmail1">Email</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                        else.</small>
+                        placeholder="Digite seu email">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <label for="exampleInputPassword1">Senha</label>
+                    <input type="Senha" class="form-control" id="exampleInputPassword1" placeholder="Senha">
                 </div>
-                <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <div>
+                <button type="submit" class="btn btn-primary ">Enviar</button>
+                <a href="/">Não tem uma conta?</a></div>
             </form>
             </div>
         
