--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!--Segunda row-->
     <div class="row container">
       <div class="col-md-6 mt-5">
-        <button type="button" class="btn btn-secondary btn-lg btn-block">Entre na nossa lista de espera</button>
+        <button type="button" class="btn btn-secondary btn-lg btn-block" href="listaDeEspera.html">Entre na nossa lista de espera</button>
 
         <div class="row justify-content-center ">
           <div class="col-md-6 mt-1">
