criação pasta html

--- a/html/listaDeEspera.html
+++ b/html/listaDeEspera.html
@@ -9,33 +9,34 @@
     <title>Projeto: plantinha</title>
 </head>
 <body>
-    <header class=" container">
+    <header >
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Plantinhas</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+            <li class="nav-item nav-pills">
+              <a class="nav-link active" href="login.html">Login</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
       
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-           <!-- <a class="navbar-brand" href="#">Navbar</a> --> 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="../index.html">Principal <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="sobre.html">Sobre</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="listaDeEspera.html">Lista de espera</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="login.html">Login</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contato.html">contato</a>
-                  </li>
-              </ul>
-            </div>
-          </nav>
     </header>
     <h2>Cadastro lista de espera</h2>
     <form>
