--- a/html/login.html
+++ b/html/login.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     </link>
-    <style src="assets/css/style.css"></style>
+    <style src="../assets/css/style.css"></style>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Plantinhas</a>
+        <a class="navbar-brand" href="../index.html">Plantinhas</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,14 +25,14 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">lorem</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">lorem</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
+                </li> -->
                 <li class="nav-item nav-pills">
                     <a class="nav-link active" href="#">Login</a>
                 </li>
@@ -63,7 +63,7 @@
         
 
         <div class="col-md-6">
-            <img class="" src="assets/img/canva3.png" alt="" width="655px" height="570px">
+            <img class="" src="../assets/img/canva3.png" alt="" width="655px" height="570px">
         </div>
     
     </div>
