--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">lorem</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">lorem</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
+        </li> -->
         <li class="nav-item nav-pills">
-          <a class="nav-link active" href="login.html">Login</a>
+          <a class="nav-link active" href="./html/login.html">Login</a>
         </li>
       </ul>
     </div>
@@ -67,7 +67,7 @@
     <!--Segunda row-->
     <div class="row container">
       <div class="col-md-6 mt-5">
-        <button type="button" class="btn btn-secondary btn-lg btn-block" href="listaDeEspera.html">Entre na nossa lista de espera</button>
+      <a href="./html/listaDeEspera.html"><button type="button" class="btn btn-secondary btn-lg btn-block">Entre na nossa lista de git espera</button> </a> 
 
         <div class="row justify-content-center ">
           <div class="col-md-6 mt-1">
