Estilo da página

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <style src="assets/css/style.css"></style>
 </head>
 
-<body>
+<body >
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Plantinhas</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -41,7 +41,7 @@
   </nav>
 
   <!--Primeria row-->
-  <div class="container shadow-lg p-3 mb-5 bg-white rounded">
+  <div class="container shadow-lg p-3 mb-5 rounded" >
     <div>
       <h1 class="mt-5 text-center">Titulo</h1>
     </div>
@@ -134,8 +134,8 @@
   <!--Terceira row/ Sobre nós-->
 
   
-  <div class="container-fluid" style="background-color: rgba(194, 181, 207, 0.465);">
-    <hr>
+  <div class="container-fluid shadow-lg p-3 mb-5 rounded" style="background-color: rgba(194, 181, 207, 0.465);">
+    
     <div>
       <h1 class=" text-center">Sobre nós</h1>
     </div>
