--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
     <!-- /Navbar -->
 
     <!-- form -->
-    <div class="row container align-items-center ">
+    <div class="row container align-items-center " style="background-color:rgba(160, 186, 158, 0.58);">
        
             <div class="col-md-6 ">
             <form class="col-md-9 shadow-lg p-3 mb-5 bg-white rounded ">
