--- a/html/listaDeEspera.html
+++ b/html/listaDeEspera.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> </link>
+ 
     <title>Projeto: plantinha</title>
 </head>
 <body>
@@ -37,7 +38,7 @@
           </ul>
         </div>
       </nav>
-      
+    
     </header>
     <h2>Cadastro lista de espera</h2>
     <form>
@@ -87,3 +88,13 @@
     </form>
   
     <script src="../javascript/requisicao.js"></script>
+
+      <!-- Footer -->
+      <footer class=" pt-4 bg-light">
+        <hr>
+        <div class="text-center pb-3">© 2022 Copyright:
+            <a href="/"> Resilia</a>
+        </div>
+    </footer>
+    <!-- Footer -->
+ </html>
